WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269795
REGRESSION: Scrolling down and attempting to fullscreen video on twitter.com displays the feed
https://bugs.webkit.org/show_bug.cgi?id=269795
Summary
REGRESSION: Scrolling down and attempting to fullscreen video on twitter.com ...
Aditya Keerthi
Reported
2024-02-20 07:56:08 PST
rdar://122981183
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-02-20 08:17:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24821
EWS
Comment 2
2024-02-21 11:06:50 PST
Committed
275115@main
(e680442311f3): <
https://commits.webkit.org/275115@main
> Reviewed commits have been landed. Closing PR #24821 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug