Cherry-pick 275115@main (e680442311f3). https://bugs.webkit.org/show_bug.cgi?id=269795

REGRESSION: Scrolling down and attempting to fullscreen video on twitter.com displays the feed
    https://bugs.webkit.org/show_bug.cgi?id=269795
    rdar://122981183

    Reviewed by Jer Noble.

    In order for element fullscreen to behave correctly, sites rely on the following
    invariants:

    1. "fullscreenchange" is fired before "resize".
    2. The values of viewport properties during "fullscreenchange" match the fullscreen size.

    Twitter relies on (1), as they teardown the video player if "resize" occurs
    during the transition into fullscreen.

    270199@main broke two things:

    1. The ordering of "fullscreenchange" and "resize" events when entering fullscreen on iPadOS.
    2. The values of viewport properties during the "fullscreenchange" event on visionOS.

    (1) went undetected for a long time, because at first, the effect was not this
    bug, but a crash, fixed in 273885@main.

    272752@main fixed (2), but also introduced (1) on visionOS.

    To the invariant mentioned above is true, fix by adding logic which ensures
    "resize" is dispatched after "fullscreenchange".

    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::setNeedsDOMWindowResizeEvent):
    (WebCore::Document::setNeedsVisualViewportResize):
    * Source/WebCore/dom/FullscreenManager.cpp:
    (WebCore::FullscreenManager::setAnimatingFullscreen):
    (WebCore::FullscreenManager::addPendingScheduledResize):
    * Source/WebCore/dom/FullscreenManager.h:
    * Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    * Tools/TestWebKitAPI/Tests/ios/FullscreenLayoutParameters.mm: Renamed from Tools/TestWebKitAPI/Tests/ios/FullscreenOverriddenLayoutParameters.mm.
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/275115@main

Canonical link: https://commits.webkit.org/274313.173@webkitglib/2.44