Source/WebCore/dom/FullscreenManager.cpp
@@ -747,6 +747,21 @@ void FullscreenManager::setAnimatingFullscreen(bool flag)
     if (m_fullscreenElement)
         emplace(styleInvalidation, *m_fullscreenElement, { { CSSSelector::PseudoClass::InternalAnimatingFullscreenTransition, flag } });
     m_isAnimatingFullscreen = flag;
+
+    if (!m_isAnimatingFullscreen) {
+        Ref<Document> protectedDocument(document());
+        if (m_pendingScheduledResize.contains(ResizeType::DOMWindow))
+            protectedDocument->setNeedsDOMWindowResizeEvent();
+        if (m_pendingScheduledResize.contains(ResizeType::VisualViewport))
+            protectedDocument->setNeedsVisualViewportResize();
+
+        m_pendingScheduledResize = { };
+    }
+}
+
+void FullscreenManager::addPendingScheduledResize(ResizeType type)
+{
+    m_pendingScheduledResize.add(type);
 }
 
 void FullscreenManager::clear()
@@ -754,6 +769,8 @@ void FullscreenManager::clear()
     m_fullscreenElement = nullptr;
     m_pendingFullscreenElement = nullptr;
     m_pendingPromise = nullptr;
+
+    m_pendingScheduledResize = { };
 }
 
 void FullscreenManager::emptyEventQueue()
